# archival-intelligences

./: .gitignore  CLAUDE.md  MODE_B_IMPLEMENTATION.md  README.md  biome.json  exhibition_image.py  exhibition_image_to_image.py  exhibition_text_to_image.py  exhibition_with_realtime_noise.py  get_started.py  modal_batch_endpoints_v2.py  package.json  pyproject.toml
.claude/: settings.json
api/: .diffusion_stream.py.swp  Caddyfile  Makefile  diffusion_stream.py  poetry.lock.old  pyproject.toml  server.py  service.py  uvicorn.service  webcam_stream.py
api/notebook/: inference.ipynb
api/programs/: p0.py  p2.py  p3.py
api/shared/: README.md  pipeline_config.py  pipeline_factory.py  pipeline_operations.py
api/shared/adapters/: batch_adapter.py  websocket_adapter.py
api/src/: diffusion.py  main.py
api/utils/: chuamiatee_size.py  connection_state.py  latents.py  lora.py  pipeline_manager.py  pipelines.py  ws.py
chuamiatee-lora/: pyproject.toml
chuamiatee-lora/assets/: README.md
legacy-api/: Caddyfile  Makefile  README.md  pyproject.toml  server.py
legacy-api/programs/: p0.py  (+2 more)
lora/: flux-lora.safetensors  replicate-lora.safetensors  v1.safetensors
notebook/: inference.ipynb  resize.ipynb
preprocessor/: README.md  batch-generator.ts  cues.json  debug-read.ts  generate.ts  package.json  process.ts  types.ts
replicate/: pregen.py
requester/: .env.example  README.md  package.json
serverless/: README.md
ui/: .gitignore  api.paw  biome.json  index.html  package.json  pnpm-lock.yaml  start-kiosk.sh  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+131 files in other folders)
